# fin_lit_chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-gcp-vm.yml
fin_lit_chatbot/: __init__.py  config.py  constants.py  engine.py  ingest.py  payloads.py  rag.py  rag_settings.py  routing.py  schema.py  subgraph_agents.py  telegram_bot.py  tools.py
tests/: test_structured_payloads.py
