[project]
name = "fin-lit-chatbot"
version = "0.1.0"
description = "Simple financial literacy chatbot with LangGraph, ChromaDB, Streamlit, and OpenRouter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "pydantic>=2.12.5",
    "python-telegram-bot>=22.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]

[project.scripts]
finlit-ingest = "fin_lit_chatbot.ingest:main"
finlit-telegram = "fin_lit_chatbot.telegram_bot:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fin_lit_chatbot*"]
